--- a/visualdesign.css
+++ b/visualdesign.css
@@ -1,10 +1,32 @@
-.jumbotron {
-    background-image:url(/img/logo.png);
+.logo {
     height: 105px;
     width: 105px;
-    background-size: contain;
-    display: flex;
-    flex-direction: row-reverse;
-
 }
-
+.text {
+    text-align: center;
+    font-family: "Anton";
+}
+.container {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 200px;
+    height: 50px;
+}
+.holder {
+    margin-right: 5px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+.h1 {
+    background: blue;
+}
+.h2 {
+    background: red;
+}
+.h3 {
+    background: green;
+}
+.h4 {
+    background: grey;
+}
