--- a/visualdesign.css
+++ b/visualdesign.css
@@ -51,11 +51,6 @@ body {
 
 }
 
-img{
-    border-style: solid;
-    border-color: #EE6655;
-
-}
 /*/* Screen larger than 600px? 2 column */
 @media (min-width: 600px) {
 .cards { grid-template-columns: repeat(2, 1fr);}
@@ -69,3 +64,19 @@ img{
 .background-color {
     background-color: #E6E6E6;
 }
+
+.project1, .project2, .project3, .project4 {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+img {
+    border-color: #F0F0F0;
+    border-style: solid;
+    border-width: 10px;
+}
+h4 {
+    font-size: 16px;
+}
+
